# Cryptal

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: benchmark_sha256.rs  benchmark_sha256_ref.rs  sha256.rs  sha256_ref.rs
src/: lib.rs
src/derivation/argon2id/: block.rs  boundary.rs  core.rs  memory.rs  mod.rs  params.rs  reference.rs
src/encryption/: mod.rs
src/encryption/poly1305/: core.rs  mac.rs  mod.rs
src/hash/: mod.rs
src/hash/blake2b/: hash.rs
src/hash/sha256/: computations.rs  core.rs  mod.rs
src/hash/sha512/: core.rs
src/keys/: mod.rs
src/keys/ed25519/: core.rs  ct.rs  field.rs  mod.rs  scalar.rs
src/keys/x25519/: core.rs  mod.rs
src/os/: linux.rs  macos.rs  mod.rs  windows.rs
src/primitives/: mod.rs  ops.rs  u256.rs
src/primitives/conv/: mod.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs
src/primitives/u256/: core.rs  mod.rs  ops.rs
src/primitives/u256/conv/: mod.rs  u128.rs  u16.rs  u32.rs  u8.rs  usize.rs
src/primitives/u512/: core.rs  mod.rs  ops.rs
src/recovery/: mod.rs
src/recovery/sss/: core.rs  field.rs  mod.rs
src/rng/: chacha20.rs  chacha20drbg.rs  csprng.rs  mod.rs
src/signatures/: mod.rs
src/signatures/ed25519/: add_scalar.rs  consttime.rs  core.rs  ge.rs  group.rs  key_exchange.rs  keypair.rs  mod.rs  precomp_data.rs  sc.rs  scalar.rs  sign.rs  table.rs  verify.rs
src/utils/: mod.rs
src/utils/os/: linux.rs  mod.rs
tests/: argon2id.rs  chacha20poly1305.rs  csprng.rs  ed25519.rs  sha256.rs  sha512.rs  sss.rs  u256.rs  u512.rs  x25519.rs
(+8 files in other folders)
