[package]
name = "cryptography"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }    
sha2 = "0.10.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
opt-level = 3 
debug = true
lto = false
codegen-units = 1
split-debuginfo = "unpacked"
strip = "none"

[[bench]]
name = "sha256"
harness = false

[[bench]]
name = "sha256_ref"
harness = false

[features]
"speed" = []